After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670129 - 'Media contains photos' message right-justified
'Media contains photos' message right-justified
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: [obsolete] Visual Design
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-15 11:18 UTC by Vadim Rutkovsky
Modified: 2012-05-07 22:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vadim Rutkovsky 2012-02-15 11:18:07 UTC
Original report: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/932126

DistroRelease: Ubuntu 12.04
Package: nautilus 1:3.3.5-0ubuntu2

Screenshot: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/932126/+attachment/2738831/+files/nautilus-phone-right-justified-labels.png

The buttons+text nautilus adds to windows for devices containing media is laid out poorly (see attached screenshot)

To reproduce:
1) Plug in a phone or USB drive containing media
2) In a nautilus window, navigate to the device from step #1

Expected results:
The Nautilus window has a message that "These files are on a digital audio player" with an "Open Rhythmbox Music Player" button, and/or a message that "The media contains digital photos" with an "Open Shotwell Photo Manager" button. The messages are left-justified within the nautilus window

Actual results:
The messages+buttons are right-justified within the nautilus window, which looks awkward (see screenshot). There are a couple specific problems:
* There is no padding between the right edge of the message and the edge of the window, so the text is jammed against the edge of the window which doesn't match the layout of any other text
* For left-to-right languages, the button comes before the explanatory text so you have to start reading in the middle of the line then jump back to the beginning of the line
* There is a funny stair-step effect of buttons within the window; they are not vertically aligned to anything

A better layout might be to move the explanatory text to the left of the buttons, left-justify the text, right-justify the buttons, and leave a space between the buttons + text that can expand as necessary with the size of the window.
Comment 1 Cosimo Cecchi 2012-05-07 22:10:52 UTC
Thanks for the report, I now pushed a fix for this to the master and gnome-3-4 branches.