x-content-bar: pack the media label in the content area

Instead of just packing it into the GtkInfoBar's box, since that will
put it after the buttons of the action area.

https://bugzilla.gnome.org/show_bug.cgi?id=670129